ทำ validate ของระบบบันทึกการจ่ายยา - close #185
