# backend/docs/swagger.yaml
@@ -15,9 +15,15 @@ definitions:
     type: object
   controllers.DispenseMedicine:
     properties:
+      amountchangemedicine:
+        type: integer
       annotation:
         type: integer
       datetime:
+        type: string
+      detailchangemedicine:
+        type: string
+      note:
         type: string
       pharmacist:
         type: integer
@@ -152,8 +158,16 @@ definitions:
     type: object
   ent.DispenseMedicine:
     properties:
+      amountchangemedicine:
+        description: Amountchangemedicine holds the value of the "amountchangemedicine"
+          field.
+        type: integer
       datetime:
         description: Datetime holds the value of the "datetime" field.
+        type: string
+      detailchangemedicine:
+        description: Detailchangemedicine holds the value of the "detailchangemedicine"
+          field.
         type: string
       edges:
         $ref: '#/definitions/ent.DispenseMedicineEdges'
@@ -164,6 +178,9 @@ definitions:
       id:
         description: ID of the ent.
         type: integer
+      note:
+        description: Note holds the value of the "note" field.
+        type: string
     type: object
   ent.DispenseMedicineEdges:
     properties:
